--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,6 @@
-idea:
+calibre:
     build: .
-    labels:
-        org.kurron.description: "JetBrains PyCharm Python IDE"
-        org.kurron.version: "5.0.1"
-    container_name: "pycharm"
+    container_name: "calibre"
     net: "host"
     volumes:
         - /tmp/.X11-unix:/tmp/.X11-unix
